feat: media-service JWT 인증 추가 (API Gateway 제거 대비)
- CustomUserDetails, CurrentUser 어노테이션 추가
- JwtAuthenticationFilter, JwtAuthenticationEntryPoint 추가
- TokenBlacklistService (Redis 기반) 추가
- SecurityConfig에 JWT 필터 적용
- /ws/**, /actuator/health, /error만 permitAll